Source/WebCore/rendering/svg/SVGTextLayoutEngine.h
@@ -64,6 +64,7 @@ private:
     void updateRelativePositionAdjustmentsIfNeeded(float dx, float dy);
 
     void recordTextFragment(InlineIterator::SVGTextBoxIterator, const Vector<SVGTextMetrics>&);
+    void computeCurrentFragmentMetrics(InlineIterator::SVGTextBoxIterator);
     bool parentDefinesTextLength(RenderObject*) const;
 
     void layoutTextOnLineOrPath(InlineIterator::SVGTextBoxIterator, const RenderSVGInlineText&, const RenderStyle&);
